--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-lg main-navbar">
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarContenido">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 gap-1 gap-lg-5">
+                <ul class="navbar-nav mb-2 mb-lg-0 gap-1 gap-lg-5">
                     <li class="nav-item d-lg-none separator"><a class="nav-link" href="#">INICIO</a></li>
                     <li class="nav-item d-none d-lg-block"><a class="nav-link" href="#">INICIO</a></li>
                     <li class="nav-item separator"><a class="nav-link" href="#">NOSOTROS</a></li>
