--- a/login.html
+++ b/login.html
@@ -51,9 +51,9 @@
     <hr class="navbar-divider">
 
     <main class="d-flex justify-content-center align-items-center">
-        <section class="registro-container shadow rounded col-11 col-sm-10 col-md-8 col-lg-6 col-xl-5"> 
+        <section class="registro-container shadow rounded col-11 col-sm-10 col-md-8 col-lg-6 col-xl-5 mt-4 mb-4"> 
             <h1>INICIA SESIÓN</h1>
-            <form action="#" method="POST" class="user-registration-form">
+            <form action="#" method="POST" class="user-registration-form d-flex flex-column gap-3">
                 <div class="mb-3"> 
                     <div class="form-group">
                         <label for="email">Correo Electrónico</label>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
 
-                <div class="form-controls">
+                <div class="form-controls d-flex flex-column align-items-center mt-3">
                     <div class="checkbox-group">
                         <input type="checkbox" id="mostrar-password" name="mostrar-password">
                         <label for="mostrar-password" style="font-weight: normal; margin:0;">Mostrar Contraseña</label>
