--- a/recover.html
+++ b/recover.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="layout.css">
-    <link rel="stylesheet" href="recover.css"> 
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/recover.css"> 
     
 </head>
 <body>
@@ -60,8 +60,9 @@
         </div>
     </main>
 
-    <script src="componentes.js"></script>
-    <script src="recover.js"></script>
+    <script src="js/componentes.js"></script>
+    <script src="js/recover.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
