--- a/adminPanel.html
+++ b/adminPanel.html
@@ -6,8 +6,8 @@
     <title>KIKIBROWS | Panel de Administración</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/dashboard.css">
+    <link rel="stylesheet" href="css/layoutAdmin.css">
+    <link rel="stylesheet" href="css/dashboardAdmin.css">
 </head>
 <body>
 
@@ -104,8 +104,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/componentes.js"></script>
-    <script src="js/dashboard.js"></script>
+    <script src="js/componenteAdmin.js"></script>
+    <script src="js/dashboardAdmin.js"></script>
 
 </body>
 </html>
