previsualizacion de cursos

--- a/registrate.html
+++ b/registrate.html
@@ -16,7 +16,7 @@
    <div id="navbar-global"></div>
 
     <main class="d-flex justify-content-center align-items-center">
-        <section class="registro-container shadow rounded col-11 col-sm-10 col-md-8 col-lg-6 col-xl-5"> 
+        <section class="registro-container shadow rounded col-11 col-sm-10 col-md-8 col-lg-6 col-xl-5 mt-4 mb-4"> 
             <h1>CREA TU CUENTA</h1>
             <form action="#" method="POST" class="user-registration-form">
     
