--- a/creaCurso.html
+++ b/creaCurso.html
@@ -132,7 +132,7 @@
                                         <div class="drag-handle" title="Arrastra para reordenar">
                                             <i class="fas fa-grip-vertical"></i>
                                         </div>
-                                        <span class="modulo-name">Nombre del módulo</span>
+                                        <span class="modulo-name">módulo 1</span>
                                         <a href="gestorModulos.html?id=1" class="btn-modulo-edit" title="Editar contenido del módulo">
                                             <i class="fas fa-pen"></i>
                                         </a>
@@ -143,7 +143,7 @@
                                         <div class="drag-handle" title="Arrastra para reordenar">
                                             <i class="fas fa-grip-vertical"></i>
                                         </div>
-                                        <span class="modulo-name">Nombre del módulo</span>
+                                        <span class="modulo-name">módulo 2</span>
                                         <a href="gestorModulos.html?id=2" class="btn-modulo-edit" title="Editar contenido del módulo">
                                             <i class="fas fa-pen"></i>
                                         </a>
@@ -154,7 +154,7 @@
                                         <div class="drag-handle" title="Arrastra para reordenar">
                                             <i class="fas fa-grip-vertical"></i>
                                         </div>
-                                        <span class="modulo-name">Nombre del módulo</span>
+                                        <span class="modulo-name">módulo 3</span>
                                         <a href="gestorModulos.html?id=3" class="btn-modulo-edit" title="Editar contenido del módulo">
                                             <i class="fas fa-pen"></i>
                                         </a>
