--- a/adminPanel.html
+++ b/adminPanel.html
@@ -6,96 +6,114 @@
     <title>KIKIBROWS | Panel de Administración</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    
     <link rel="stylesheet" href="css/layoutAdmin.css">
+    <link rel="stylesheet" href="css/account.css">
     <link rel="stylesheet" href="css/dashboardAdmin.css">
 </head>
 <body>
 
     <header id="navbar-global"></header>
 
-    <div id="main-container">
+    <div id="main-container" class="d-flex">
         <aside id="sidebar">
             <div class="sidebar-header">
                 <div class="profile-section">
                     <div class="profile-pic">
-                        <i class="fas fa-user-circle"></i>
+                        <i class="fas fa-user-shield"></i>
                     </div>
                     <div class="profile-info">
-                        <div class="user-name">Nombre de Usuario</div>
-                        <small>Cambiar foto de perfil</small>
+                        <div class="user-name">Emilio Admin</div>
+                        <small class="text-success fw-bold">Super Admin</small>
                     </div>
                 </div>
             </div>
 
             <nav class="sidebar-nav">
-                <a href="#" class="nav-item active"><i class="fas fa-users"></i> Usuarios</a>
-                <a href="#" class="nav-item"><i class="fas fa-exchange-alt"></i> Transacciones</a>
-                <a href="#" class="nav-item"><i class="fas fa-certificate"></i> Certificados</a>
-                <a href="#" class="nav-item"><i class="fas fa-calendar-alt"></i> Calendario</a>
-                <a href="#" class="nav-item"><i class="fas fa-search"></i> Revisiones</a>
-                <a href="#" class="nav-item"><i class="fas fa-cog"></i> Configurar Perfil</a>
+                <a href="adminPanel.html" class="nav-item active"><i class="fas fa-home"></i> Dashboard</a>
+                <a href="usersGest.html" class="nav-item"><i class="fas fa-users"></i> Usuarios</a>
+                <a href="gestionCursos.html" class="nav-item"><i class="fas fa-book"></i> Gestión Cursos</a>
+                <a href="adminTransa.html" class="nav-item"><i class="fas fa-exchange-alt"></i> Transacciones</a>
+                <a href="adminCalendar.html" class="nav-item"><i class="fas fa-calendar-alt"></i> Calendario</a>
+                <a href="revYFeedback.html" class="nav-item"><i class="fas fa-search"></i> Revisiones</a>
             </nav>
         </aside>
 
-        <main id="dashboard-content" class="p-3 p-md-5">
-            <h1 class="dashboard-title">Hola, Emilio</h1>
-            <p class="dashboard-subtitle">Esto ha ocurrido este mes <i class="fas fa-chevron-down ms-2"></i></p>
+        <main class="p-4 w-100" id="dashboard-content">
+            <h1 class="text-start mb-2">Hola, Emilio</h1>
+            <p class="text-muted mb-4">Resumen de actividad mensual <i class="fas fa-chevron-down ms-1"></i></p>
 
-            <section class="row g-4 mb-5">
-                <div class="col-6 col-md-3">
-                    <div class="stat-card">
-                        <i class="fas fa-users card-icon"></i>
-                        <div class="card-label">Usuarios Activos</div>
-                        <div class="card-value">24 <span class="card-trend positive">(+20%)</span></div>
+            <section class="row g-4 mb-4">
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="account-card p-4 h-100 d-flex flex-column justify-content-center align-items-center text-center">
+                        <i class="fas fa-users fs-1 mb-2" style="color: #8B9D6F;"></i>
+                        <h5 class="text-muted">Usuarios Activos</h5>
+                        <h2 class="fw-bold mb-0">24</h2>
                     </div>
                 </div>
 
-                <div class="col-6 col-md-3">
-                    <div class="stat-card">
-                        <i class="fas fa-dollar-sign card-icon"></i>
-                        <div class="card-label">Facturación</div>
-                        <div class="card-value">$487,000 <span class="card-trend positive">(+20%)</span></div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="account-card p-4 h-100 d-flex flex-column justify-content-center align-items-center text-center">
+                        <i class="fas fa-dollar-sign fs-1 mb-2" style="color: #8B9D6F;"></i>
+                        <h5 class="text-muted">Facturación</h5>
+                        <h2 class="fw-bold mb-0">$487,000</h2>
                     </div>
                 </div>
 
-                <div class="col-6 col-md-3">
-                    <div class="stat-card">
-                        <i class="fas fa-user-plus card-icon"></i>
-                        <div class="card-label">Usuarios Nuevos</div>
-                        <div class="card-value">10 <span class="card-trend positive">(+12%)</span></div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="account-card p-4 h-100 d-flex flex-column justify-content-center align-items-center text-center">
+                        <i class="fas fa-user-plus fs-1 mb-2" style="color: #8B9D6F;"></i>
+                        <h5 class="text-muted">Nuevos</h5>
+                        <h2 class="fw-bold mb-0">10</h2>
                     </div>
                 </div>
 
-                <div class="col-6 col-md-3">
-                    <div class="stat-card">
-                        <i class="fas fa-graduation-cap card-icon"></i>
-                        <div class="card-label">Cursos Vendidos</div>
-                        <div class="card-value">25 <span class="card-trend negative">(-38%)</span></div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="account-card p-4 h-100 d-flex flex-column justify-content-center align-items-center text-center">
+                        <i class="fas fa-graduation-cap fs-1 mb-2" style="color: #8B9D6F;"></i>
+                        <h5 class="text-muted">Cursos</h5>
+                        <h2 class="fw-bold mb-2">25</h2>
+                        <a href="gestionCursos.html" class="text-decoration-none fw-bold small" style="color: #8B9D6F;">
+                            Ver Cursos <i class="fas fa-arrow-right ms-1"></i>
+                        </a>
                     </div>
                 </div>
             </section>
 
             <section class="row g-4">
                 <div class="col-12 col-lg-6">
-                    <div class="main-panel">
-                        <h3 class="panel-title"><i class="fas fa-search me-2"></i> Revisiones Pendientes</h3>
-                        <div class="panel-content-placeholder"></div>
-                        <a href="#" class="panel-link">Ver Todas</a>
+                    <div class="account-card p-4 h-100">
+                        <h3 class="fs-5 border-bottom pb-2 mb-3"><i class="fas fa-search me-2" style="color: #8B9D6F;"></i> Revisiones Pendientes</h3>
+                        <div class="d-flex align-items-center justify-content-center text-muted" style="min-height: 150px; background-color: rgba(255,255,255,0.4); border-radius: 8px;">
+                            <p class="m-0 fst-italic">No hay revisiones pendientes.</p>
+                        </div>
+                        <div class="mt-3 text-end">
+                            <a href="revYFeedback.html" class="text-decoration-none fw-bold" style="color: #8B9D6F;">Ver Todas</a>
+                        </div>
                     </div>
                 </div>
 
                 <div class="col-12 col-lg-6">
-                    <div class="main-panel">
-                        <h3 class="panel-title"><i class="fas fa-eraser me-2"></i> Borradores</h3>
-                        <div class="panel-content-placeholder"></div>
-                        <a href="#" class="panel-link">Ver Todas</a>
+                    <div class="account-card p-4 h-100">
+                        <h3 class="fs-5 border-bottom pb-2 mb-3"><i class="fas fa-eraser me-2" style="color: #8B9D6F;"></i> Borradores</h3>
+                        <div class="d-flex align-items-center justify-content-center text-muted" style="min-height: 150px; background-color: rgba(255,255,255,0.4); border-radius: 8px;">
+                            <p class="m-0 fst-italic">Borrador: Curso de Cejas (Sin guardar)</p>
+                        </div>
+                        <div class="mt-3 text-end">
+                            <a href="#" class="text-decoration-none fw-bold" style="color: #8B9D6F;">Ver Todos</a>
+                        </div>
                     </div>
                 </div>
 
                 <div class="col-12">
-                    <div class="main-panel">
-                        <h3 class="panel-title"><i class="fas fa-calendar-alt me-2"></i> Calendario</h3>
-                        <div class="panel-content-placeholder large"></div>
+                    <div class="account-card p-4">
+                        <h3 class="fs-5 border-bottom pb-2 mb-3"><i class="fas fa-calendar-alt me-2" style="color: #8B9D6F;"></i> Calendario Rápido</h3>
+                        <div class="d-flex align-items-center justify-content-center" style="min-height: 250px; background-color: rgba(255,255,255,0.4); border-radius: 8px;">
+                             <span class="text-muted"><i class="far fa-calendar fs-1 d-block mb-2 opacity-50"></i>Vista previa del calendario</span>
+                        </div>
+                         <div class="mt-3 text-end">
+                            <a href="adminCalendar.html" class="text-decoration-none fw-bold" style="color: #8B9D6F;">Ir al Calendario Completo</a>
+                        </div>
                     </div>
                 </div>
             </section>
