--- a/claseAlumn.html
+++ b/claseAlumn.html
@@ -81,5 +81,16 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/claseAlumn.js"></script>
+    <script src="js/componentsAlumn.js"></script>
+    <script>
+        UI.initNavbar();
+        UI.initSidebar();
+	// Interactividad extra: Botón completar
+	const btnCompletar = document.querySelector('.custom-btn-guardar');
+    	btnCompletar.onclick = function() {
+        	this.innerHTML = '¡Lección Completada! <i class="fas fa-check-double ms-2"></i>';
+        	this.style.background = "#28a745"; // Color éxito
+    	};
+    </script>
 </body>
 </html>
