--- a/login.html
+++ b/login.html
@@ -66,6 +66,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     
     <script src="js/componentes.js"></script>
+    <script src="js/login.js"></script>
 
 </body>
 </html>
