--- a/account.html
+++ b/account.html
@@ -16,13 +16,13 @@
     <div id="header-component"></div>
 
     <main class="container py-5">
-        <h1 class="text-center mb-4">Mi Cuenta</h1>
+        <h1 class="text-start mb-4">Mi Cuenta</h1>
 
         <div id="dashboard-view">
             <div class="row g-4"> 
                 
                 <div class="col-lg-6">
-                    <div class="account-card p-4 h-100 d-flex flex-column"> 
+                    <div class="account-card p-4 h-100 d-flex flex-column text-start"> 
                         <h2>Información de la cuenta</h2>
                         <div class="info-content flex-grow-1">
                             <p><strong>Nombre:</strong> Daniela Candi</p>
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="col-lg-6">
-                    <div class="account-card p-4 h-100 d-flex flex-column">
+                    <div class="account-card p-4 h-100 d-flex flex-column text-start">
                         <h2>Historial de compras</h2>
                         <div class="info-content flex-grow-1">
                             <p><strong>Transacciones realizadas</strong></p>
@@ -46,7 +46,7 @@
                 </div>
 
                 <div class="col-lg-6">
-                    <div class="account-card p-4 h-100 d-flex flex-column">
+                    <div class="account-card p-4 h-100 d-flex flex-column text-start">
                         <h2>Mis Certificados</h2>
                         
                         <div class="info-content flex-grow-1">
@@ -65,7 +65,7 @@
                 </div>
 
                 <div class="col-lg-6">
-                    <div class="account-card p-4 h-100 d-flex flex-column">
+                    <div class="account-card p-4 h-100 d-flex flex-column text-start">
                         <h2>Direcciones</h2>
                         <div class="info-content flex-grow-1">
                             <p>Información de ubicación y dirección de facturación</p>
