me faltaba el html

--- a/registrate.html
+++ b/registrate.html
@@ -77,15 +77,15 @@
                     <i class="fas fa-envelope-open-text" style="font-size: 3rem; color: var(--primary-color);"></i>
                 </div>
                 <h2 class="mb-3">Verifica tu cuenta</h2>
-                <p class="mb-1">Hemos enviado un código de 6 dígitos a:</p>
+                <p class="mb-1">Hemos enviado un código de 8 dígitos a:</p>
                 <p class="mb-4"><strong id="email-mostrado" style="color: var(--primary-color);"></strong></p>
 
                 <div class="mb-3">
                     <input type="text"
                            id="codigo-verificacion"
                            class="form-control text-center"
-                           placeholder="000000"
-                           maxlength="6"
+                           placeholder="00000000"
+                           maxlength="8"
                            inputmode="numeric"
                            pattern="[0-9]*"
                            autocomplete="one-time-code"
