--- a/adminPanel.html
+++ b/adminPanel.html
@@ -11,8 +11,43 @@
     <link rel="stylesheet" href="css/layoutAdmin.css">
     <link rel="stylesheet" href="css/account.css">
     <link rel="stylesheet" href="css/dashboardAdmin.css">
+
+    <style>
+        body {
+            visibility: hidden; /* Oculto por defecto */
+            opacity: 0;
+            transition: opacity 0.3s ease-in;
+        }
+        /* Clase para mostrar el cuerpo solo cuando sea seguro */
+        body.loaded {
+            visibility: visible;
+            opacity: 1;
+        }
+        
+        /* Spinner de carga mientras verificamos */
+        #loading-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            background: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+            visibility: visible !important; /* Siempre visible aunque el body esté oculto */
+            opacity: 1 !important;
+        }
+    </style>
 </head>
 <body>
+
+    <div id="loading-screen">
+        <div class="spinner-border text-warning" role="status" style="width: 3rem; height: 3rem;">
+            <span class="visually-hidden">Verificando acceso...</span>
+        </div>
+    </div>
 
     <header id="navbar-global"></header>
 
@@ -124,6 +159,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    
     <script type="module" src="js/authGuardAdmin.js"></script>
     <script type="module" src="js/componenteAdmin.js"></script>
     <script src="js/dashboardAdmin.js"></script>
