--- a/course-preview.html
+++ b/course-preview.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preview del Curso - KIKIBROWS</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Cargando curso... - KIKIBROWS</title> <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
     <link rel="stylesheet" href="css/fonts.css">
@@ -14,7 +12,6 @@
 </head>
 <body>
 
-    <!-- Banner de Previsualización (solo visible en modo admin preview) -->
     <div id="previewBanner" class="preview-banner" style="display: none;">
         <div class="preview-banner-content">
             <i class="fas fa-eye me-2"></i>
@@ -25,219 +22,142 @@
         </a>
     </div>
 
-    <!-- Navbar -->
     <div id="navbar-global"></div>
 
     <main class="preview-main">
-        <div class="container">
-            <!-- Botón de volver -->
+        <div class="container" id="mainContainer">
             <div class="mt-4 mb-3">
                 <a href="index.html#cursos" class="btn btn-outline-secondary">
                     <i class="fas fa-arrow-left me-2"></i>Volver a Cursos
                 </a>
             </div>
 
-            <!-- Hero del Curso -->
-            <section class="curso-hero-section">
-                <div class="hero-wrapper">
-                    <div class="hero-portada" id="heroPortada">
-                        <i class="fas fa-image"></i>
-                    </div>
-                    <div class="hero-info">
-                        <h1 class="curso-titulo" id="cursoNombre">Nombre del curso</h1>
-                        <p class="curso-descripcion" id="cursoDescripcion">
-                            Descripción del curso...
-                        </p>
-                    </div>
+            <div id="globalLoader" class="text-center py-5">
+                <div class="spinner-border text-primary" role="status">
+                    <span class="visually-hidden">Cargando...</span>
                 </div>
-            </section>
+                <p class="mt-3 text-muted">Cargando información del curso...</p>
+            </div>
 
-            <!-- Meta Info con precio y botón de compra -->
-            <section class="curso-meta-section">
-                <div class="meta-card">
-                    <div class="meta-item">
-                        <span class="meta-label">Precio:</span>
-                        <span class="meta-value" id="cursoPrecio">$0 CLP</span>
+            <div id="courseContent" style="display: none;">
+                <section class="curso-hero-section">
+                    <div class="hero-wrapper">
+                        <div class="hero-portada" id="heroPortada">
+                            <div class="bg-light d-flex align-items-center justify-content-center" style="height: 100%; width: 100%;">
+                                <i class="fas fa-image text-muted fa-2x"></i>
+                            </div>
+                        </div>
+                        <div class="hero-info">
+                            <h1 class="curso-titulo" id="cursoNombre"></h1>
+                            <p class="curso-descripcion" id="cursoDescripcion"></p>
+                        </div>
                     </div>
-                    <div class="meta-item">
-                        <span class="meta-label">Duración:</span>
-                        <span class="meta-value" id="cursoDuracion">0 min</span>
-                    </div>
-                    <div class="meta-item">
-                        <span class="meta-label">Módulos:</span>
-                        <span class="meta-value" id="cursoModulos">0 módulos</span>
-                    </div>
-                    <div class="meta-item" style="border-right: none; display: flex; align-items: center; justify-content: center;">
-                        <button class="btn-comprar-curso" id="btnComprarCurso">
-                            <i class="fas fa-shopping-cart me-2"></i>
-                            Comprar Curso
-                        </button>
-                    </div>
-                </div>
-            </section>
+                </section>
 
-            <!-- Incluye -->
-            <section class="curso-incluye-section">
-                <div class="incluye-card">
-                    <h5 class="incluye-title">
-                        <i class="fas fa-check-circle me-2"></i>Este curso incluye:
-                    </h5>
-                    <ul class="incluye-list">
-                        <li>
-                            <i class="fas fa-infinity me-2"></i>
-                            Acceso completo de por vida
-                        </li>
-                        <li>
-                            <i class="fas fa-certificate me-2"></i>
-                            Certificado de finalización
-                        </li>
-                        <li>
-                            <i class="fas fa-download me-2"></i>
-                            Contenido descargable
-                        </li>
-                        <li>
-                            <i class="fas fa-headset me-2"></i>
-                            Soporte de instructores
-                        </li>
-                    </ul>
-                </div>
-            </section>
-
-            <!-- Módulos -->
-            <section class="curso-modulos-section">
-                <h3 class="modulos-titulo">
-                    <i class="fas fa-list me-2"></i>Contenido del Curso
-                </h3>
-                <div class="modulos-container" id="modulosList">
-                    <div class="loading-state">
-                        <i class="fas fa-spinner fa-spin me-2"></i>
-                        Cargando estructura del curso...
+                <section class="curso-meta-section">
+                    <div class="meta-card">
+                        <div class="meta-item">
+                            <span class="meta-label">Precio:</span>
+                            <span class="meta-value" id="cursoPrecio">--</span>
+                        </div>
+                        <div class="meta-item">
+                            <span class="meta-label">Duración:</span>
+                            <span class="meta-value" id="cursoDuracion">--</span>
+                        </div>
+                        <div class="meta-item">
+                            <span class="meta-label">Módulos:</span>
+                            <span class="meta-value" id="cursoModulos">--</span>
+                        </div>
+                        <div class="meta-item" style="border-right: none; display: flex; align-items: center; justify-content: center;">
+                            <button class="btn-comprar-curso" id="btnComprarCurso" disabled>
+                                <span class="spinner-border spinner-border-sm me-2 d-none" role="status" aria-hidden="true"></span>
+                                Cargando...
+                            </button>
+                        </div>
                     </div>
-                </div>
-            </section>
+                </section>
+
+                <section class="curso-incluye-section">
+                    <div class="incluye-card">
+                        <h5 class="incluye-title">
+                            <i class="fas fa-check-circle me-2"></i>Este curso incluye:
+                        </h5>
+                        <ul class="incluye-list">
+                            <li><i class="fas fa-infinity me-2"></i>Acceso completo de por vida</li>
+                            <li><i class="fas fa-certificate me-2"></i>Certificado de finalización</li>
+                            <li><i class="fas fa-download me-2"></i>Contenido descargable</li>
+                            <li><i class="fas fa-headset me-2"></i>Soporte de instructores</li>
+                        </ul>
+                    </div>
+                </section>
+
+                <section class="curso-modulos-section">
+                    <h3 class="modulos-titulo">
+                        <i class="fas fa-list me-2"></i>Contenido del Curso
+                    </h3>
+                    <div class="modulos-container" id="modulosList">
+                        </div>
+                </section>
+            </div>
         </div>
     </main>
 
-    <!-- Modal Portal de Pago -->
     <div id="portalPagoModal" class="portal-pago-modal">
         <div class="portal-pago-overlay"></div>
         <div class="portal-pago-container">
-            <button class="portal-pago-close" id="btnCerrarPortal">
-                <i class="fas fa-times"></i>
-            </button>
-
+            <button class="portal-pago-close" id="btnCerrarPortal"><i class="fas fa-times"></i></button>
             <div class="portal-pago-content">
                 <h2 class="portal-titulo">Proceder al pago</h2>
                 <p class="portal-subtitulo">Serás redirigido a Webpay para completar tu compra de forma segura.</p>
-
-                <!-- Información del Curso -->
                 <div class="portal-curso-info">
-                    <h3 id="portalCursoNombre">Nombre del curso</h3>
+                    <h3 id="portalCursoNombre"></h3>
                     <div class="portal-precio-section">
                         <span class="portal-precio-label">Total a pagar</span>
-                        <span class="portal-precio-valor" id="portalCursoPrecio">$0</span>
+                        <span class="portal-precio-valor" id="portalCursoPrecio"></span>
                     </div>
                 </div>
-
-                <!-- Selección de Método de Pago -->
                 <div class="portal-metodos-pago">
                     <h4 class="portal-metodos-titulo">Selecciona tu método de pago</h4>
-
                     <div class="metodos-grid">
-                        <!-- Webpay (Transbank) -->
                         <button class="metodo-pago-btn" id="btnWebpay">
-                            <div class="metodo-icon">
-                                <i class="fas fa-credit-card"></i>
-                            </div>
-                            <div class="metodo-info">
-                                <h5>Webpay</h5>
-                                <p>Pago seguro procesado por Transbank</p>
-                            </div>
+                            <div class="metodo-icon"><i class="fas fa-credit-card"></i></div>
+                            <div class="metodo-info"><h5>Webpay</h5><p>Pago seguro procesado por Transbank</p></div>
                         </button>
-
-                        <!-- Mercado Pago -->
                         <button class="metodo-pago-btn" id="btnMercadoPago">
-                            <div class="metodo-icon">
-                                <i class="fas fa-wallet"></i>
-                            </div>
-                            <div class="metodo-info">
-                                <h5>Mercado Pago</h5>
-                                <p>Tarjetas de crédito y débito</p>
-                            </div>
+                            <div class="metodo-icon"><i class="fas fa-wallet"></i></div>
+                            <div class="metodo-info"><h5>Mercado Pago</h5><p>Tarjetas de crédito y débito</p></div>
                         </button>
                     </div>
                 </div>
-
-                <!-- Sección para integración de Webpay (Transbank) -->
                 <div id="seccionWebpay" class="seccion-pago" style="display: none;">
-                    <div class="pago-header">
-                        <i class="fas fa-credit-card"></i>
-                        <h4>Pago con Webpay</h4>
-                    </div>
-
-                    <!-- AQUÍ SE INTEGRARÁ LA API DE TRANSBANK -->
-                    <div class="api-placeholder">
-                        <p class="api-instruccion">
-                            <i class="fas fa-code me-2"></i>
-                            Zona de integración para API de Transbank/Webpay
-                        </p>
-
-                        <!-- Formulario de ejemplo para Transbank -->
+                     <div class="pago-header"><i class="fas fa-credit-card"></i><h4>Pago con Webpay</h4></div>
+                     <div class="api-placeholder">
+                        <p class="api-instruccion"><i class="fas fa-code me-2"></i>Zona de integración para API de Transbank/Webpay</p>
                         <form id="formWebpay" class="form-pago">
-                            <!-- Los campos específicos de Transbank se agregarán aquí -->
                             <input type="hidden" name="token_ws" id="tokenWebpay">
-
-                            <button type="submit" class="btn-pagar-webpay">
-                                <i class="fas fa-lock me-2"></i>
-                                Pagar con Webpay
-                            </button>
+                            <button type="submit" class="btn-pagar-webpay"><i class="fas fa-lock me-2"></i>Pagar con Webpay</button>
                         </form>
                     </div>
                 </div>
-
-                <!-- Sección para integración de Mercado Pago -->
                 <div id="seccionMercadoPago" class="seccion-pago" style="display: none;">
-                    <div class="pago-header">
-                        <i class="fas fa-wallet"></i>
-                        <h4>Pago con Mercado Pago</h4>
-                    </div>
-
-                    <!-- AQUÍ SE INTEGRARÁ LA API DE MERCADO PAGO -->
+                    <div class="pago-header"><i class="fas fa-wallet"></i><h4>Pago con Mercado Pago</h4></div>
                     <div class="api-placeholder">
-                        <p class="api-instruccion">
-                            <i class="fas fa-code me-2"></i>
-                            Zona de integración para API de Mercado Pago
-                        </p>
-
-                        <!-- Contenedor para el checkout de Mercado Pago -->
-                        <div id="mercadoPagoCheckout" class="mp-checkout-container">
-                            <!-- El widget de Mercado Pago se renderizará aquí -->
-                        </div>
-
-                        <button type="button" class="btn-pagar-mp" id="btnPagarMercadoPago">
-                            <i class="fas fa-lock me-2"></i>
-                            Pagar con Mercado Pago
-                        </button>
+                        <p class="api-instruccion"><i class="fas fa-code me-2"></i>Zona de integración para API de Mercado Pago</p>
+                        <div id="mercadoPagoCheckout" class="mp-checkout-container"></div>
+                        <button type="button" class="btn-pagar-mp" id="btnPagarMercadoPago"><i class="fas fa-lock me-2"></i>Pagar con Mercado Pago</button>
                     </div>
                 </div>
-
-                <!-- Botón Volver -->
-                <button class="btn-volver-checkout" id="btnVolverCheckout">
-                    <i class="fas fa-arrow-left me-2"></i>
-                    Volver al curso
-                </button>
+                <button class="btn-volver-checkout" id="btnVolverCheckout"><i class="fas fa-arrow-left me-2"></i>Volver al curso</button>
             </div>
         </div>
     </div>
 
-    <!-- Footer -->
     <footer class="text-center py-4 mt-5 bg-dark text-white">
         <p class="mb-0">&copy; 2024 KIKIBROWS. Todos los derechos reservados.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="js/componentes.js"></script>
-    <!-- Cursos desde Supabase -->
     <script type="module" src="js/coursePreview.js"></script>
 </body>
 </html>
