cursos, modulos y clases

--- a/course-preview.html
+++ b/course-preview.html
@@ -82,10 +82,8 @@
                         <h5 class="incluye-title">
                             <i class="fas fa-check-circle me-2"></i>Este curso incluye:
                         </h5>
-                        <ul class="incluye-list">
-                            <li><i class="fas fa-infinity me-2"></i>Acceso completo de por vida</li>
+                        <ul class="d-flex justify-content-start incluye-list">
                             <li><i class="fas fa-certificate me-2"></i>Certificado de finalización</li>
-                            <li><i class="fas fa-download me-2"></i>Contenido descargable</li>
                             <li><i class="fas fa-headset me-2"></i>Soporte de instructores</li>
                         </ul>
                     </div>
